// Vitest Snapshot v1

exports[`partial and derivative > should parse matrix 1`] = `
[
  {
    "current": 1,
    "isKeyWord": true,
    "tex": "[",
    "type": "LParen",
    "value": "[",
  },
  {
    "current": 5,
    "isKeyWord": true,
    "tex": "\\\\partial",
    "type": "OperatorPartial",
    "value": "part",
  },
  {
    "current": 6,
    "isKeyWord": true,
    "tex": "^{ $1 }",
    "type": "OperatorSup",
    "value": "^",
  },
  {
    "current": 7,
    "isKeyWord": false,
    "tex": "2",
    "type": "NumberLiteral",
    "value": "2",
  },
  {
    "current": 9,
    "isKeyWord": false,
    "tex": "f",
    "type": "StringLiteral",
    "value": "f",
  },
  {
    "current": 11,
    "isKeyWord": false,
    "tex": "x",
    "type": "StringLiteral",
    "value": "x",
  },
  {
    "current": 12,
    "isKeyWord": true,
    "tex": ",",
    "type": "Split",
    "value": ",",
  },
  {
    "current": 17,
    "isKeyWord": true,
    "tex": "\\\\partial",
    "type": "OperatorPartial",
    "value": "part",
  },
  {
    "current": 18,
    "isKeyWord": true,
    "tex": "^{ $1 }",
    "type": "OperatorSup",
    "value": "^",
  },
  {
    "current": 19,
    "isKeyWord": false,
    "tex": "2",
    "type": "NumberLiteral",
    "value": "2",
  },
  {
    "current": 21,
    "isKeyWord": false,
    "tex": "f",
    "type": "StringLiteral",
    "value": "f",
  },
  {
    "current": 23,
    "isKeyWord": true,
    "tex": "(",
    "type": "LParen",
    "value": "(",
  },
  {
    "current": 24,
    "isKeyWord": false,
    "tex": "x",
    "type": "StringLiteral",
    "value": "x",
  },
  {
    "current": 26,
    "isKeyWord": false,
    "tex": "y",
    "type": "StringLiteral",
    "value": "y",
  },
  {
    "current": 27,
    "isKeyWord": true,
    "tex": ")",
    "type": "RParen",
    "value": ")",
  },
  {
    "current": 28,
    "isKeyWord": true,
    "tex": ";",
    "type": "Split",
    "value": ";",
  },
  {
    "current": 33,
    "isKeyWord": true,
    "tex": "\\\\partial",
    "type": "OperatorPartial",
    "value": "part",
  },
  {
    "current": 34,
    "isKeyWord": true,
    "tex": "^{ $1 }",
    "type": "OperatorSup",
    "value": "^",
  },
  {
    "current": 35,
    "isKeyWord": false,
    "tex": "2",
    "type": "NumberLiteral",
    "value": "2",
  },
  {
    "current": 37,
    "isKeyWord": false,
    "tex": "f",
    "type": "StringLiteral",
    "value": "f",
  },
  {
    "current": 39,
    "isKeyWord": true,
    "tex": "(",
    "type": "LParen",
    "value": "(",
  },
  {
    "current": 40,
    "isKeyWord": false,
    "tex": "y",
    "type": "StringLiteral",
    "value": "y",
  },
  {
    "current": 42,
    "isKeyWord": false,
    "tex": "x",
    "type": "StringLiteral",
    "value": "x",
  },
  {
    "current": 43,
    "isKeyWord": true,
    "tex": ")",
    "type": "RParen",
    "value": ")",
  },
  {
    "current": 44,
    "isKeyWord": true,
    "tex": ",",
    "type": "Split",
    "value": ",",
  },
  {
    "current": 49,
    "isKeyWord": true,
    "tex": "\\\\partial",
    "type": "OperatorPartial",
    "value": "part",
  },
  {
    "current": 50,
    "isKeyWord": true,
    "tex": "^{ $1 }",
    "type": "OperatorSup",
    "value": "^",
  },
  {
    "current": 51,
    "isKeyWord": false,
    "tex": "2",
    "type": "NumberLiteral",
    "value": "2",
  },
  {
    "current": 53,
    "isKeyWord": false,
    "tex": "f",
    "type": "StringLiteral",
    "value": "f",
  },
  {
    "current": 55,
    "isKeyWord": false,
    "tex": "y",
    "type": "StringLiteral",
    "value": "y",
  },
  {
    "current": 56,
    "isKeyWord": true,
    "tex": "]",
    "type": "RParen",
    "value": "]",
  },
]
`;

exports[`partial and derivative > should parse matrix 2`] = `
{
  "body": [
    {
      "alignment": "c",
      "dividerIndices": [],
      "lparen": "\\\\left[",
      "params": [
        [
          {
            "body": [
              {
                "params": [
                  {
                    "body": [
                      {
                        "tex": "\\\\partial",
                        "type": "Const",
                        "value": "\\\\partial",
                      },
                      {
                        "params": {
                          "tex": "2",
                          "type": "Const",
                          "value": "2",
                        },
                        "tex": "^{ $1 }",
                        "type": "ParamOne",
                      },
                      {
                        "tex": "f",
                        "type": "Const",
                        "value": "f",
                      },
                    ],
                    "type": "Flat",
                  },
                  {
                    "body": [
                      {
                        "tex": "\\\\partial",
                        "type": "Const",
                        "value": "\\\\partial",
                      },
                      {
                        "tex": "x",
                        "type": "Const",
                        "value": "x",
                      },
                      {
                        "params": {
                          "tex": "2",
                          "type": "Const",
                          "value": "2",
                        },
                        "tex": "^{ $1 }",
                        "type": "ParamOne",
                      },
                    ],
                    "type": "Flat",
                  },
                ],
                "tex": "\\\\frac{ $1 }{ $2 }",
                "type": "ParamTwo",
              },
            ],
            "type": "Flat",
          },
          {
            "body": [
              {
                "params": [
                  {
                    "body": [
                      {
                        "tex": "\\\\partial",
                        "type": "Const",
                        "value": "\\\\partial",
                      },
                      {
                        "params": {
                          "tex": "2",
                          "type": "Const",
                          "value": "2",
                        },
                        "tex": "^{ $1 }",
                        "type": "ParamOne",
                      },
                      {
                        "tex": "f",
                        "type": "Const",
                        "value": "f",
                      },
                    ],
                    "type": "Flat",
                  },
                  {
                    "body": [
                      {
                        "tex": "\\\\partial",
                        "type": "Const",
                        "value": "\\\\partial",
                      },
                      {
                        "tex": "x",
                        "type": "Const",
                        "value": "x",
                      },
                      {
                        "tex": "\\\\partial",
                        "type": "Const",
                        "value": "\\\\partial",
                      },
                      {
                        "tex": "y",
                        "type": "Const",
                        "value": "y",
                      },
                    ],
                    "type": "Flat",
                  },
                ],
                "tex": "\\\\frac{ $1 }{ $2 }",
                "type": "ParamTwo",
              },
            ],
            "type": "Flat",
          },
        ],
        [
          {
            "body": [
              {
                "params": [
                  {
                    "body": [
                      {
                        "tex": "\\\\partial",
                        "type": "Const",
                        "value": "\\\\partial",
                      },
                      {
                        "params": {
                          "tex": "2",
                          "type": "Const",
                          "value": "2",
                        },
                        "tex": "^{ $1 }",
                        "type": "ParamOne",
                      },
                      {
                        "tex": "f",
                        "type": "Const",
                        "value": "f",
                      },
                    ],
                    "type": "Flat",
                  },
                  {
                    "body": [
                      {
                        "tex": "\\\\partial",
                        "type": "Const",
                        "value": "\\\\partial",
                      },
                      {
                        "tex": "y",
                        "type": "Const",
                        "value": "y",
                      },
                      {
                        "tex": "\\\\partial",
                        "type": "Const",
                        "value": "\\\\partial",
                      },
                      {
                        "tex": "x",
                        "type": "Const",
                        "value": "x",
                      },
                    ],
                    "type": "Flat",
                  },
                ],
                "tex": "\\\\frac{ $1 }{ $2 }",
                "type": "ParamTwo",
              },
            ],
            "type": "Flat",
          },
          {
            "body": [
              {
                "params": [
                  {
                    "body": [
                      {
                        "tex": "\\\\partial",
                        "type": "Const",
                        "value": "\\\\partial",
                      },
                      {
                        "params": {
                          "tex": "2",
                          "type": "Const",
                          "value": "2",
                        },
                        "tex": "^{ $1 }",
                        "type": "ParamOne",
                      },
                      {
                        "tex": "f",
                        "type": "Const",
                        "value": "f",
                      },
                    ],
                    "type": "Flat",
                  },
                  {
                    "body": [
                      {
                        "tex": "\\\\partial",
                        "type": "Const",
                        "value": "\\\\partial",
                      },
                      {
                        "tex": "y",
                        "type": "Const",
                        "value": "y",
                      },
                      {
                        "params": {
                          "tex": "2",
                          "type": "Const",
                          "value": "2",
                        },
                        "tex": "^{ $1 }",
                        "type": "ParamOne",
                      },
                    ],
                    "type": "Flat",
                  },
                ],
                "tex": "\\\\frac{ $1 }{ $2 }",
                "type": "ParamTwo",
              },
            ],
            "type": "Flat",
          },
        ],
      ],
      "rparen": "\\\\right]",
      "type": "Matrix",
    },
  ],
  "type": "Root",
}
`;

exports[`partial and derivative > should parse matrix 3`] = `"\\\\left[ \\\\begin{array}{cc} \\\\frac{ \\\\partial ^{ 2 } f }{ \\\\partial x ^{ 2 } } & \\\\frac{ \\\\partial ^{ 2 } f }{ \\\\partial x \\\\partial y } \\\\\\\\ \\\\frac{ \\\\partial ^{ 2 } f }{ \\\\partial y \\\\partial x } & \\\\frac{ \\\\partial ^{ 2 } f }{ \\\\partial y ^{ 2 } } \\\\end{array} \\\\right]"`;

exports[`partial and derivative > should parse x^2 1`] = `
{
  "body": [
    {
      "params": [
        {
          "body": [
            {
              "tex": "\\\\partial",
              "type": "Const",
              "value": "\\\\partial",
            },
            {
              "params": {
                "tex": "3",
                "type": "Const",
                "value": "3",
              },
              "tex": "^{ $1 }",
              "type": "ParamOne",
            },
            {
              "tex": "f",
              "type": "Const",
              "value": "f",
            },
          ],
          "type": "Flat",
        },
        {
          "body": [
            {
              "tex": "\\\\partial",
              "type": "Const",
              "value": "\\\\partial",
            },
            {
              "tex": "x",
              "type": "Const",
              "value": "x",
            },
            {
              "tex": "\\\\partial",
              "type": "Const",
              "value": "\\\\partial",
            },
            {
              "body": [
                {
                  "tex": "y",
                  "type": "Const",
                  "value": "y",
                },
                {
                  "params": {
                    "tex": "2",
                    "type": "Const",
                    "value": "2",
                  },
                  "tex": "^{ $1 }",
                  "type": "ParamOne",
                },
              ],
              "type": "Flat",
            },
          ],
          "type": "Flat",
        },
      ],
      "tex": "\\\\frac{ $1 }{ $2 }",
      "type": "ParamTwo",
    },
  ],
  "type": "Root",
}
`;

exports[`partial and derivative > should tokenize expressions 1`] = `
[
  {
    "current": 4,
    "isKeyWord": true,
    "tex": "\\\\partial",
    "type": "OperatorPartial",
    "value": "part",
  },
  {
    "current": 6,
    "isKeyWord": false,
    "tex": "f",
    "type": "StringLiteral",
    "value": "f",
  },
  {
    "current": 8,
    "isKeyWord": false,
    "tex": "x",
    "type": "StringLiteral",
    "value": "x",
  },
]
`;

exports[`partial and derivative > should tokenize expressions 2`] = `
{
  "body": [
    {
      "params": [
        {
          "body": [
            {
              "tex": "\\\\partial",
              "type": "Const",
              "value": "\\\\partial",
            },
            {
              "tex": "f",
              "type": "Const",
              "value": "f",
            },
          ],
          "type": "Flat",
        },
        {
          "body": [
            {
              "tex": "\\\\partial",
              "type": "Const",
              "value": "\\\\partial",
            },
            {
              "tex": "x",
              "type": "Const",
              "value": "x",
            },
          ],
          "type": "Flat",
        },
      ],
      "tex": "\\\\frac{ $1 }{ $2 }",
      "type": "ParamTwo",
    },
  ],
  "type": "Root",
}
`;

exports[`partial and derivative > should tokenize expressions 3`] = `"\\\\frac{ \\\\partial f }{ \\\\partial x }"`;
